fixed white space

--- a/css/pws_2.css
+++ b/css/pws_2.css
@@ -191,7 +191,7 @@ a:hover, a:active {
     position:relative;
     display: inline-block;
     left: 0;
-    width: 90%;
+    width: 80%;
     background-color:red;
   /*    top: 5%; */
   /*  bottom:20%; */
